fix: padding and overflow adjustment.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,7 @@ a {
   width: 100%;
   left: 0;
   top: 0;
-  padding: 1rem 2.5rem;
+  padding: 1rem;
   background-color: #05010ef8;
   animation: fadeInDown;
   animation-duration: 1s;
